Novo nome implementado

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <meta name="description" content="FinControl - Controle suas despesas pessoais de forma simples e eficiente. Acompanhe suas finanças em tempo real." />
+    <meta name="description" content="AppFinance - Controle suas despesas pessoais de forma simples e eficiente. Acompanhe suas finanças em tempo real." />
     <meta name="keywords" content="Controle Financeiro, finanças pessoais, orçamento, despesas" />
-    <meta property="og:title" content="FinControl - Controle Financeiro Pessoal" />
+    <meta property="og:title" content="AppFinance - Controle Financeiro Pessoal" />
     <meta property="og:description" content="Controle suas despesas pessoais de forma simples e eficiente." />
     <meta property="og:type" content="website" />
     <title>AppFinance - Controle Financeiro Pessoal</title>
